kubernetes/ocp/guestbook/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-service
  namespace: guestbook-mssql
spec:
  selector:
    app: guestbook
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  clusterIP: None
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guestbook
  namespace: guestbook-mssql
  labels:
    app: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
        deployment: guestbook
    spec:
      containers:
        - name: guestbook
          image: >-
            registry.xphyrlab.net:8443/markd/guestbook-mssql:latest
          volumeMounts:
          - name: database-config
            mountPath: /opt/app-root/src/config
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      volumes:
        - name: database-config
          configMap:
            name: guestbook-config
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
