kubernetes/ocp/guestbook/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook
  namespace: guestbookphp
spec:
  defaultBackend:
    service:
      name: guestbook-service
      port:
        number: 80
  ingressClassName: nginx
  rules:
    - {}
status:
